Refaktoryzacja "header" do BEM

--- a/portfolio.html
+++ b/portfolio.html
@@ -19,29 +19,33 @@
     />
   </head>
   <body>
+    <!-- ---------HEADER---------  -->
+
     <header>
-      <div class="header-box">
+      <div class="header">
         <h2>
-          <a class="link-1 header-logo" href="index.html"
-            >Web<span class="header-span">Studio</span></a
+          <a class="header__link header__logo" href="index.html"
+            >Web<span class="header__span">Studio</span></a
           >
         </h2>
         <div>
           <nav>
-            <ul class="header-items">
-              <li><a class="link" href="index.html">Agencja</a></li>
+            <ul class="menu">
+              <li><a class="menu__link" href="index.html">Agencja</a></li>
               <li>
-                <a class="link underline" href="portfolio.html">Portfolio</a>
+                <a class="menu__link menu__underline" href="portfolio.html"
+                  >Portfolio</a
+                >
               </li>
-              <li><a class="link" href="">Kontakt</a></li>
+              <li><a class="menu__link" href="">Kontakt</a></li>
             </ul>
           </nav>
         </div>
         <div>
-          <ul class="header-items-2">
+          <ul class="contacts">
             <li>
-              <a class="link-2" href="mailto:info@devstudio.com">
-                <svg class="envelope">
+              <a class="contacts__link" href="mailto:info@devstudio.com">
+                <svg class="contacts__link--envelope">
                   <use
                     xlink:href="./images/sprite-svg/icons.svg#envelope"
                   ></use>
@@ -50,8 +54,8 @@
               >
             </li>
             <li>
-              <a class="link-2" href="tel:+48111111111"
-                ><svg class="smartphone">
+              <a class="contacts__link" href="tel:+48111111111"
+                ><svg class="contacts__link--smartphone">
                   <use
                     xlink:href="./images/sprite-svg/icons.svg#smartphone"
                   ></use>
@@ -67,7 +71,7 @@
       <section class="section">
         <div class="container">
           <nav>
-            <ul class="menu">
+            <ul class="menu-2">
               <li><button class="navy-btn" type="button">Wszystkie</button></li>
               <li><button class="navy-btn" type="button">Strony</button></li>
               <li><button class="navy-btn" type="button">Aplikacje</button></li>
