--- a/index.html
+++ b/index.html
@@ -19,27 +19,35 @@
     />
   </head>
   <body>
+    <!-- ---------HEADER--------- -->
+
     <header>
-      <div class="header-box">
+      <div class="header">
         <h2>
-          <a class="link-1 header-logo" href="#"
-            >Web<span class="header-span">Studio</span></a
+          <a class="header__link header__logo" href="index.html"
+            >Web<span class="header__span">Studio</span></a
           >
         </h2>
         <div>
           <nav>
-            <ul class="header-items">
-              <li><a class="link underline" href="">Agencja</a></li>
-              <li><a class="link" href="portfolio.html">Portfolio</a></li>
-              <li><a class="link" href="">Kontakt</a></li>
+            <ul class="menu">
+              <li>
+                <a class="menu__link menu__underline" href="index.html"
+                  >Agencja</a
+                >
+              </li>
+              <li>
+                <a class="menu__link" href="portfolio.html">Portfolio</a>
+              </li>
+              <li><a class="menu__link" href="">Kontakt</a></li>
             </ul>
           </nav>
         </div>
         <div>
-          <ul class="header-items-2">
+          <ul class="contacts">
             <li>
-              <a class="link-2" href="mailto:info@devstudio.com">
-                <svg class="envelope">
+              <a class="contacts__link" href="mailto:info@devstudio.com">
+                <svg class="contacts__link--envelope">
                   <use
                     xlink:href="./images/sprite-svg/icons.svg#envelope"
                   ></use>
@@ -48,8 +56,8 @@
               >
             </li>
             <li>
-              <a class="link-2" href="tel:+48111111111"
-                ><svg class="smartphone">
+              <a class="contacts__link" href="tel:+48111111111"
+                ><svg class="contacts__link--smartphone">
                   <use
                     xlink:href="./images/sprite-svg/icons.svg#smartphone"
                   ></use>
