Refaktoryzowałem "banner" w "main"

--- a/index.html
+++ b/index.html
@@ -69,11 +69,16 @@
         </div>
       </div>
     </header>
+
+    <!-- ---------MAIN--------- -->
+
     <main>
-      <section class="background section background-box">
-        <div class="container slogan-box">
-          <h1 class="slogan">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
-          <button class="btn" type="button" data-modal-open>
+      <section class="section banner">
+        <div class="container banner__box">
+          <h1 class="banner__slogan">
+            EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU
+          </h1>
+          <button class="banner__button" type="button" data-modal-open>
             Zamów usługe
           </button>
         </div>
