--- a/portfolio.html
+++ b/portfolio.html
@@ -67,6 +67,9 @@
         </div>
       </div>
     </header>
+
+    <!-- ---------MAIN--------- -->
+
     <main>
       <section class="section">
         <div class="container">
