Refaktoryzowałem sekcję "informations" w "Main" na BEM

--- a/index.html
+++ b/index.html
@@ -85,53 +85,53 @@
       </section>
       <section class="section">
         <div class="container">
-          <ul class="text-table">
-            <li class="text-table-box">
-              <div class="icon-box">
-                <svg class="icon">
+          <ul class="informations">
+            <li class="informations__box">
+              <div class="informations__icon--box">
+                <svg class="informations__icon">
                   <use xlink:href="./images/sprite-svg/icons.svg#antenna"></use>
                 </svg>
               </div>
-              <h4 class="text-title">LOREM IPSUM</h4>
-              <p class="text">
+              <h4 class="informations__title">LOREM IPSUM</h4>
+              <p class="informations__text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
                 arcu sem. Sed non sodales dui. Interdum et malesuada
               </p>
             </li>
-            <li class="text-table-box">
-              <div class="icon-box">
-                <svg class="icon">
+            <li class="informations__box">
+              <div class="informations__icon--box">
+                <svg class="informations__icon">
                   <use xlink:href="./images/sprite-svg/icons.svg#clock"></use>
                 </svg>
               </div>
-              <h4 class="text-title">LOREM IPSUM</h4>
-              <p class="text">
+              <h4 class="informations__title">LOREM IPSUM</h4>
+              <p class="informations__text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
                 arcu sem. Sed non sodales dui. Interdum et malesuada
               </p>
             </li>
-            <li class="text-table-box">
-              <div class="icon-box">
-                <svg class="icon">
+            <li class="informations__box">
+              <div class="informations__icon--box">
+                <svg class="informations__icon">
                   <use xlink:href="./images/sprite-svg/icons.svg#diagram"></use>
                 </svg>
               </div>
-              <h4 class="text-title">LOREM IPSUM</h4>
-              <p class="text">
+              <h4 class="informations__title">LOREM IPSUM</h4>
+              <p class="informations__text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
                 arcu sem. Sed non sodales dui. Interdum et malesuada
               </p>
             </li>
-            <li class="text-table-box">
-              <div class="icon-box">
-                <svg class="icon">
+            <li class="informations__box">
+              <div class="informations__icon--box">
+                <svg class="informations__icon">
                   <use
                     xlink:href="./images/sprite-svg/icons.svg#astronaut"
                   ></use>
                 </svg>
               </div>
-              <h4 class="text-title">LOREM IPSUM</h4>
-              <p class="text">
+              <h4 class="informations__title">LOREM IPSUM</h4>
+              <p class="informations__text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
                 arcu sem. Sed non sodales dui. Interdum et malesuada
               </p>
