Refaktoryzowałem sekcje "services" w "main"

--- a/index.html
+++ b/index.html
@@ -141,34 +141,34 @@
       </section>
       <section class="section">
         <div class="container">
-          <h2 class="section-title">Czym się zajmujemy</h2>
-          <ul class="section-table">
-            <li class="section-table-box">
+          <h2 class="services__title">Czym się zajmujemy</h2>
+          <ul class="services__table">
+            <li class="services__table--box">
               <img
                 src="images/main-page/img.jpg"
                 alt="Osoba tworzy kod programowy"
                 width="370"
                 height="294"
               />
-              <p class="describe">aplikacje komputerowe</p>
+              <p class="services__describe">aplikacje komputerowe</p>
             </li>
-            <li class="section-table-box">
+            <li class="services__table--box">
               <img
                 src="images/main-page/img-2.jpg"
                 alt="Osoba trzymająca telefon w ręce przegląda design stron aplikacji"
                 width="370"
                 height="294"
               />
-              <p class="describe">aplikacje mobilne</p>
+              <p class="services__describe">aplikacje mobilne</p>
             </li>
-            <li class="section-table-box">
+            <li class="services__table--box">
               <img
                 src="images/main-page/box-3.jpg"
                 alt="Widoczny na tablecie kolorowy sześciokąt"
                 width="370"
                 height="294"
               />
-              <p class="describe">rozwiązania graficzne</p>
+              <p class="services__describe">rozwiązania graficzne</p>
             </li>
           </ul>
         </div>
