Refaktoryzowałem sekcję "team" w "main" do BEM

--- a/index.html
+++ b/index.html
@@ -173,21 +173,21 @@
           </ul>
         </div>
       </section>
-      <section class="section team-background">
+      <section class="section team">
         <div class="container">
-          <h2 class="section-title">Nasz zespół</h2>
-          <ul class="photos-description">
-            <li class="photos-background">
+          <h2 class="team__title">Nasz zespół</h2>
+          <ul class="team__photos--description">
+            <li class="team__photos--background">
               <img
                 src="images/main-page/img-4.jpg"
                 alt="Uśmiechnięty męczyzna z brodą w okularach i bordowej koszuli"
                 width="270"
                 height="260"
               />
-              <h3 class="name">John Doe</h3>
-              <p class="profession">Product Designer</p>
-              <div class="social-icon-box">
-                <svg class="social-icon-item">
+              <h3 class="team__name">John Doe</h3>
+              <p class="team__profession">Product Designer</p>
+              <div class="team__icon--box">
+                <svg class="team__icon--item">
                   <use
                     width="20px"
                     height="20px"
@@ -196,7 +196,7 @@
                     xlink:href="./images/sprite-svg/icons.svg#instagram"
                   ></use>
                 </svg>
-                <svg class="social-icon-item">
+                <svg class="team__icon--item">
                   <use
                     width="20px"
                     height="20px"
@@ -205,7 +205,7 @@
                     xlink:href="./images/sprite-svg/icons.svg#twitter"
                   ></use>
                 </svg>
-                <svg class="social-icon-item">
+                <svg class="team__icon--item">
                   <use
                     width="20px"
                     height="20px"
@@ -214,7 +214,7 @@
                     xlink:href="./images/sprite-svg/icons.svg#facebook"
                   ></use>
                 </svg>
-                <svg class="social-icon-item">
+                <svg class="team__icon--item">
                   <use
                     width="20px"
                     height="20px"
@@ -225,17 +225,17 @@
                 </svg>
               </div>
             </li>
-            <li class="photos-background">
+            <li class="team__photos--background">
               <img
                 src="images/main-page/img-5.jpg"
                 alt="Uśmiechnięta, blondwłosa kobieta w okularach i czarnej marynarce"
                 width="270"
                 height="260"
               />
-              <h3 class="name">John Doe</h3>
-              <p class="profession">Frontend Developer</p>
-              <div class="social-icon-box">
-                <svg class="social-icon-item">
+              <h3 class="team__name">John Doe</h3>
+              <p class="team__profession">Frontend Developer</p>
+              <div class="team__icon--box">
+                <svg class="team__icon--item">
                   <use
                     width="20px"
                     height="20px"
@@ -244,7 +244,7 @@
                     xlink:href="./images/sprite-svg/icons.svg#instagram"
                   ></use>
                 </svg>
-                <svg class="social-icon-item">
+                <svg class="team__icon--item">
                   <use
                     width="20px"
                     height="20px"
@@ -253,7 +253,7 @@
                     xlink:href="./images/sprite-svg/icons.svg#twitter"
                   ></use>
                 </svg>
-                <svg class="social-icon-item">
+                <svg class="team__icon--item">
                   <use
                     width="20px"
                     height="20px"
@@ -262,7 +262,7 @@
                     xlink:href="./images/sprite-svg/icons.svg#facebook"
                   ></use>
                 </svg>
-                <svg class="social-icon-item">
+                <svg class="team__icon--item">
                   <use
                     width="20px"
                     height="20px"
@@ -273,17 +273,17 @@
                 </svg>
               </div>
             </li>
-            <li class="photos-background">
+            <li class="team__photos--background">
               <img
                 src="images/main-page/img-6.jpg"
                 alt="Uśmiechnięty męczyzna z brodą w błękitnej koszuli"
                 width="270"
                 height="260"
               />
-              <h3 class="name">John Doe</h3>
-              <p class="profession">Marketing</p>
-              <div class="social-icon-box">
-                <svg class="social-icon-item">
+              <h3 class="team__name">John Doe</h3>
+              <p class="team__profession">Marketing</p>
+              <div class="team__icon--box">
+                <svg class="team__icon--item">
                   <use
                     width="20px"
                     height="20px"
@@ -292,7 +292,7 @@
                     xlink:href="./images/sprite-svg/icons.svg#instagram"
                   ></use>
                 </svg>
-                <svg class="social-icon-item">
+                <svg class="team__icon--item">
                   <use
                     width="20px"
                     height="20px"
@@ -301,7 +301,7 @@
                     xlink:href="./images/sprite-svg/icons.svg#twitter"
                   ></use>
                 </svg>
-                <svg class="social-icon-item">
+                <svg class="team__icon--item">
                   <use
                     width="20px"
                     height="20px"
@@ -310,7 +310,7 @@
                     xlink:href="./images/sprite-svg/icons.svg#facebook"
                   ></use>
                 </svg>
-                <svg class="social-icon-item">
+                <svg class="team__icon--item">
                   <use
                     width="20px"
                     height="20px"
@@ -321,17 +321,17 @@
                 </svg>
               </div>
             </li>
-            <li class="photos-background">
+            <li class="team__photos--background">
               <img
                 src="images/main-page/img-7.jpg"
                 alt="Uśmiechnięty męczyzna z brodą w okularach i czarnej koszulce"
                 width="270"
                 height="260"
               />
-              <h3 class="name">John Doe</h3>
-              <p class="profession">UI Designer</p>
-              <div class="social-icon-box">
-                <svg class="social-icon-item">
+              <h3 class="team__name">John Doe</h3>
+              <p class="team__profession">UI Designer</p>
+              <div class="team__icon--box">
+                <svg class="team__icon--item">
                   <use
                     width="20px"
                     height="20px"
@@ -340,7 +340,7 @@
                     xlink:href="./images/sprite-svg/icons.svg#instagram"
                   ></use>
                 </svg>
-                <svg class="social-icon-item">
+                <svg class="team__icon--item">
                   <use
                     width="20px"
                     height="20px"
@@ -349,7 +349,7 @@
                     xlink:href="./images/sprite-svg/icons.svg#twitter"
                   ></use>
                 </svg>
-                <svg class="social-icon-item">
+                <svg class="team__icon--item">
                   <use
                     width="20px"
                     height="20px"
@@ -358,7 +358,7 @@
                     xlink:href="./images/sprite-svg/icons.svg#facebook"
                   ></use>
                 </svg>
-                <svg class="social-icon-item">
+                <svg class="team__icon--item">
                   <use
                     width="20px"
                     height="20px"
