--- a/index.html
+++ b/index.html
@@ -374,45 +374,45 @@
       </section>
       <section class="section">
         <div class="container">
-          <h2 class="section-title">Nasi klienci</h2>
-          <ul class="section-table">
-            <li class="client-box">
-              <svg class="client-logo">
+          <h2 class="clients__title">Nasi klienci</h2>
+          <ul class="clients__table">
+            <li class="clients__box">
+              <svg class="clients__logo">
                 <use
                   xlink:href="./images/sprite-svg/icons.svg#client-logo-1"
                 ></use>
               </svg>
             </li>
-            <li class="client-box">
-              <svg class="client-logo">
+            <li class="clients__box">
+              <svg class="clients__logo">
                 <use
                   xlink:href="./images/sprite-svg/icons.svg#client-logo-2"
                 ></use>
               </svg>
             </li>
-            <li class="client-box">
-              <svg class="client-logo">
+            <li class="clients__box">
+              <svg class="clients__logo">
                 <use
                   xlink:href="./images/sprite-svg/icons.svg#client-logo-3"
                 ></use>
               </svg>
             </li>
-            <li class="client-box">
-              <svg class="client-logo">
+            <li class="clients__box">
+              <svg class="clients__logo">
                 <use
                   xlink:href="./images/sprite-svg/icons.svg#client-logo-4"
                 ></use>
               </svg>
             </li>
-            <li class="client-box">
-              <svg class="client-logo">
+            <li class="clients__box">
+              <svg class="clients__logo">
                 <use
                   xlink:href="./images/sprite-svg/icons.svg#client-logo-5"
                 ></use>
               </svg>
             </li>
-            <li class="client-box">
-              <svg class="client-logo">
+            <li class="clients__box">
+              <svg class="clients__logo">
                 <use
                   xlink:href="./images/sprite-svg/icons.svg#client-logo-6"
                 ></use>
@@ -422,28 +422,28 @@
         </div>
       </section>
     </main>
-    <footer class="background footer-box">
-      <div class="container wrapper">
-        <div class="info-ftr-box">
+    <footer class="footer">
+      <div class="container footer__wrapper">
+        <div class="footer__info--box">
           <h3>
-            <a class="link-1 header-logo" href="#"
-              >Web<span class="studio-color-2">Studio</span></a
+            <a class="footer__link footer__logo" href="#"
+              >Web<span class="footer__span">Studio</span></a
             >
           </h3>
-          <address class="adr">m. Warszawa, Aleje Jerozolimskie 21</address>
-          <div class="contact-links-2">
-            <a class="link-2 ftr" href="mailto:info@devstudio.com"
+          <address class="footer__address">m. Warszawa, Aleje Jerozolimskie 21</address>
+          <div class="footer__contacts">
+            <a class="footer__contacts__link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </div>
-          <div class="contact-links-2">
-            <a class="link-2 ftr" href="tel:+48111111111">+48 111 111 111</a>
+          <div class="footer__contacts">
+            <a class="footer__contacts__link" href="tel:+48111111111">+48 111 111 111</a>
           </div>
         </div>
-        <div class="join-box">
-          <h3 class="join">DOŁĄCZ DO NAS</h3>
-          <div class="social-icon-box">
-            <svg class="footer-icons">
+        <div class="join">
+          <h3 class="join__title">DOŁĄCZ DO NAS</h3>
+          <div class="join__icon--box">
+            <svg class="join__icons">
               <use
                 width="20px"
                 height="20px"
@@ -452,7 +452,7 @@
                 xlink:href="./images/sprite-svg/icons.svg#instagram"
               ></use>
             </svg>
-            <svg class="footer-icons">
+            <svg class="join__icons">
               <use
                 width="20px"
                 height="20px"
@@ -461,7 +461,7 @@
                 xlink:href="./images/sprite-svg/icons.svg#twitter"
               ></use>
             </svg>
-            <svg class="footer-icons">
+            <svg class="join__icons">
               <use
                 width="20px"
                 height="20px"
@@ -470,7 +470,7 @@
                 xlink:href="./images/sprite-svg/icons.svg#facebook"
               ></use>
             </svg>
-            <svg class="footer-icons">
+            <svg class="join__icons">
               <use
                 width="20px"
                 height="20px"
@@ -481,21 +481,21 @@
             </svg>
           </div>
         </div>
-        <div class="newsletter-box">
+        <div class="newsletter">
           <form>
-            <label class="label-ftr" for="email"
+            <label class="newsletter__label" for="email"
               >Zapisz się do newslettera</label
             >
             <input
-              class="input-ftr"
+              class="newsletter__input"
               type="email"
               id="email"
               name="email"
               placeholder="   E-mail"
             />
-            <button class="submit-ftr" type="submit">
+            <button class="newsletter__submit" type="submit">
               Zapisz się
-              <svg class="send-icon">
+              <svg class="newsletter__icon--send">
                 <use href="./images/sprite-svg/icons.svg#send-icon"></use>
               </svg>
             </button>
