--- a/portfolio.html
+++ b/portfolio.html
@@ -267,28 +267,28 @@
         </div>
       </section>
     </main>
-    <footer class="background footer-box">
-      <div class="container wrapper">
-        <div class="info-ftr-box">
+    <footer class="footer">
+      <div class="container footer__wrapper">
+        <div class="footer__info--box">
           <h3>
-            <a class="link-1 header-logo" href="index.html"
-              >Web<span class="studio-color-2">Studio</span></a
+            <a class="footer__link footer__logo" href="index.html"
+              >Web<span class="footer__span">Studio</span></a
             >
           </h3>
-          <address class="adr">m. Warszawa, Aleje Jerozolimskie 21</address>
-          <div class="contact-links-2">
-            <a class="link-2 ftr" href="mailto:info@devstudio.com"
+          <address class="footer__address">m. Warszawa, Aleje Jerozolimskie 21</address>
+          <div class="footer__contacts">
+            <a class="footer__contacts__link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </div>
-          <div class="contact-links-2">
-            <a class="link-2 ftr" href="tel:+48111111111">+48 111 111 111</a>
+          <div class="footer__contacts">
+            <a class="footer__contacts__link" href="tel:+48111111111">+48 111 111 111</a>
           </div>
         </div>
-        <div class="join-box">
-          <h3 class="join">DOŁĄCZ DO NAS</h3>
-          <div class="social-icon-box">
-            <svg class="footer-icons">
+        <div class="join">
+          <h3 class="join__title">DOŁĄCZ DO NAS</h3>
+          <div class="join__icon--box">
+            <svg class="join__icons">
               <use
                 width="20px"
                 height="20px"
@@ -297,7 +297,7 @@
                 xlink:href="./images/sprite-svg/icons.svg#instagram"
               ></use>
             </svg>
-            <svg class="footer-icons">
+            <svg class="join__icons">
               <use
                 width="20px"
                 height="20px"
@@ -306,7 +306,7 @@
                 xlink:href="./images/sprite-svg/icons.svg#twitter"
               ></use>
             </svg>
-            <svg class="footer-icons">
+            <svg class="join__icons">
               <use
                 width="20px"
                 height="20px"
@@ -315,7 +315,7 @@
                 xlink:href="./images/sprite-svg/icons.svg#facebook"
               ></use>
             </svg>
-            <svg class="footer-icons">
+            <svg class="join__icons">
               <use
                 width="20px"
                 height="20px"
@@ -326,20 +326,20 @@
             </svg>
           </div>
         </div>
-        <div class="newsletter-box">
+        <div class="newsletter">
           <form>
-            <label class="label-ftr" for="email"
+            <label class="newsletter__label" for="email"
               >Zapisz się do newslettera</label
             >
             <input
-              class="input-ftr"
+              class="newsletter__input"
               type="email"
               id="email"
               placeholder="   E-mail"
             />
-            <button class="submit-ftr" type="submit">
+            <button class="newsletter__submit" type="submit">
               Zapisz się
-              <svg class="send-icon">
+              <svg class="newsletter__icon--send">
                 <use href="./images/sprite-svg/icons.svg#send-icon"></use>
               </svg>
             </button>
