Refaktoryzacja sekcji "main" w "portfolio.html" na BEM

--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
         </h2>
         <div>
           <nav>
-            <ul class="menu">
+            <ul class="navigation">
               <li>
-                <a class="menu__link menu__underline" href="index.html"
+                <a class="navigation__link navigation__underline" href="index.html"
                   >Agencja</a
                 >
               </li>
               <li>
-                <a class="menu__link" href="portfolio.html">Portfolio</a>
+                <a class="navigation__link" href="portfolio.html">Portfolio</a>
               </li>
-              <li><a class="menu__link" href="">Kontakt</a></li>
+              <li><a class="navigation__link" href="">Kontakt</a></li>
             </ul>
           </nav>
         </div>
