--- a/portfolio.html
+++ b/portfolio.html
@@ -30,14 +30,14 @@
         </h2>
         <div>
           <nav>
-            <ul class="menu">
-              <li><a class="menu__link" href="index.html">Agencja</a></li>
+            <ul class="navigation">
+              <li><a class="navigation__link" href="index.html">Agencja</a></li>
               <li>
-                <a class="menu__link menu__underline" href="portfolio.html"
+                <a class="navigation__link navigation__underline" href="portfolio.html"
                   >Portfolio</a
                 >
               </li>
-              <li><a class="menu__link" href="">Kontakt</a></li>
+              <li><a class="navigation__link" href="">Kontakt</a></li>
             </ul>
           </nav>
         </div>
@@ -74,25 +74,25 @@
       <section class="section">
         <div class="container">
           <nav>
-            <ul class="menu-2">
-              <li><button class="navy-btn" type="button">Wszystkie</button></li>
-              <li><button class="navy-btn" type="button">Strony</button></li>
-              <li><button class="navy-btn" type="button">Aplikacje</button></li>
-              <li><button class="navy-btn" type="button">Dizajn</button></li>
-              <li><button class="navy-btn" type="button">Marketing</button></li>
+            <ul class="menu">
+              <li><button class="menu__button" type="button">Wszystkie</button></li>
+              <li><button class="menu__button" type="button">Strony</button></li>
+              <li><button class="menu__button" type="button">Aplikacje</button></li>
+              <li><button class="menu__button" type="button">Dizajn</button></li>
+              <li><button class="menu__button" type="button">Marketing</button></li>
             </ul>
           </nav>
-          <ul class="open-menu">
-            <li class="background-menu">
-              <div class="background-photo">
+          <ul class="catalogue">
+            <li class="catalogue__background">
+              <div class="catalogue__photo">
                 <img
                   src="images/portfolio/img-3.jpg"
                   alt="Screen of the laptop with three photos of people on the internet page"
                   width="370"
                   height="294"
                 />
-                <div class="overlay-portfolio">
-                  <p class="overlay-portfolio-text">
+                <div class="catalogue__overlay">
+                  <p class="catalogue__overlay--text">
                     Technocrack jest popularną platformą wykorzystywaną do
                     rozpowszechniania koronawirusa. Firmy wykorzystują tę
                     platformę do celów szpiegowskich i ataków na
@@ -100,19 +100,19 @@
                   </p>
                 </div>
               </div>
-              <h3 class="picture-title">Technocrack</h3>
-              <p class="work-type">Strona internetowa</p>
+              <h3 class="catalogue__title">Technocrack</h3>
+              <p class="catalogue__type">Strona internetowa</p>
             </li>
-            <li class="background-menu">
-              <div class="background-photo">
+            <li class="catalogue__background">
+              <div class="catalogue__photo">
                 <img
                   src="images/portfolio/img-8.jpg"
                   alt="Two NBA players fighting for ball"
                   width="370"
                   height="294"
                 />
-                <div class="overlay-portfolio">
-                  <p class="overlay-portfolio-text">
+                <div class="catalogue__overlay">
+                  <p class="catalogue__overlay--text">
                     Technocrack jest popularną platformą wykorzystywaną do
                     rozpowszechniania koronawirusa. Firmy wykorzystują tę
                     platformę do celów szpiegowskich i ataków na
@@ -120,19 +120,19 @@
                   </p>
                 </div>
               </div>
-              <h3 class="picture-title">Grafika New Orlean vs Golden Star</h3>
-              <p class="work-type">Dizajn</p>
+              <h3 class="catalogue__title">Grafika New Orlean vs Golden Star</h3>
+              <p class="catalogue__type">Dizajn</p>
             </li>
-            <li class="background-menu">
-              <div class="background-photo">
+            <li class="catalogue__background">
+              <div class="catalogue__photo">
                 <img
                   src="images/portfolio/img-9.jpg"
                   alt="Photo of fish from restaurant logo"
                   width="370"
                   height="294"
                 />
-                <div class="overlay-portfolio">
-                  <p class="overlay-portfolio-text">
+                <div class="catalogue__overlay">
+                  <p class="catalogue__overlay--text">
                     Technocrack jest popularną platformą wykorzystywaną do
                     rozpowszechniania koronawirusa. Firmy wykorzystują tę
                     platformę do celów szpiegowskich i ataków na
@@ -140,19 +140,19 @@
                   </p>
                 </div>
               </div>
-              <h3 class="picture-title">Restauracja Seafood</h3>
-              <p class="work-type">Aplikacja</p>
+              <h3 class="catalogue__title">Restauracja Seafood</h3>
+              <p class="catalogue__type">Aplikacja</p>
             </li>
-            <li class="background-menu">
-              <div class="background-photo">
+            <li class="catalogue__background">
+              <div class="catalogue__photo">
                 <img
                   src="images/portfolio/img-16.jpg"
                   alt="Black headphones"
                   width="370"
                   height="294"
                 />
-                <div class="overlay-portfolio">
-                  <p class="overlay-portfolio-text">
+                <div class="catalogue__overlay">
+                  <p class="catalogue__overlay--text">
                     Technocrack jest popularną platformą wykorzystywaną do
                     rozpowszechniania koronawirusa. Firmy wykorzystują tę
                     platformę do celów szpiegowskich i ataków na
@@ -160,19 +160,19 @@
                   </p>
                 </div>
               </div>
-              <h3 class="picture-title">Projekt Prime</h3>
-              <p class="work-type">Marketing</p>
+              <h3 class="catalogue__title">Projekt Prime</h3>
+              <p class="catalogue__type">Marketing</p>
             </li>
-            <li class="background-menu">
-              <div class="background-photo">
+            <li class="catalogue__background">
+              <div class="catalogue__photo">
                 <img
                   src="images/portfolio/img-11.jpg"
                   alt="Medium white paper box and smaller brown paper box "
                   width="370"
                   height="294"
                 />
-                <div class="overlay-portfolio">
-                  <p class="overlay-portfolio-text">
+                <div class="catalogue__overlay">
+                  <p class="catalogue__overlay--text">
                     Technocrack jest popularną platformą wykorzystywaną do
                     rozpowszechniania koronawirusa. Firmy wykorzystują tę
                     platformę do celów szpiegowskich i ataków na
@@ -180,19 +180,19 @@
                   </p>
                 </div>
               </div>
-              <h3 class="picture-title">Projekt Boxes</h3>
-              <p class="work-type">Aplikacja</p>
+              <h3 class="catalogue__title">Projekt Boxes</h3>
+              <p class="catalogue__type">Aplikacja</p>
             </li>
-            <li class="background-menu">
-              <div class="background-photo">
+            <li class="catalogue__background">
+              <div class="catalogue__photo">
                 <img
                   src="images/portfolio/img-12.jpg"
                   alt="Black screen of the computer with information from the internet page"
                   width="370"
                   height="294"
                 />
-                <div class="overlay-portfolio">
-                  <p class="overlay-portfolio-text">
+                <div class="catalogue__overlay">
+                  <p class="catalogue__overlay--text">
                     Technocrack jest popularną platformą wykorzystywaną do
                     rozpowszechniania koronawirusa. Firmy wykorzystują tę
                     platformę do celów szpiegowskich i ataków na
@@ -200,19 +200,19 @@
                   </p>
                 </div>
               </div>
-              <h3 class="picture-title">Inspiration has no Borders</h3>
-              <p class="work-type">Strona internetowa</p>
+              <h3 class="catalogue__title">Inspiration has no Borders</h3>
+              <p class="catalogue__type">Strona internetowa</p>
             </li>
-            <li class="background-menu">
-              <div class="background-photo">
+            <li class="catalogue__background">
+              <div class="catalogue__photo">
                 <img
                   src="images/portfolio/img-13.jpg"
                   alt="Two book pages from the magazyn with some photos "
                   width="370"
                   height="294"
                 />
-                <div class="overlay-portfolio">
-                  <p class="overlay-portfolio-text">
+                <div class="catalogue__overlay">
+                  <p class="catalogue__overlay--text">
                     Technocrack jest popularną platformą wykorzystywaną do
                     rozpowszechniania koronawirusa. Firmy wykorzystują tę
                     platformę do celów szpiegowskich i ataków na
@@ -220,19 +220,19 @@
                   </p>
                 </div>
               </div>
-              <h3 class="picture-title">Magazyn Limited Edition</h3>
-              <p class="work-type">Dizajn</p>
+              <h3 class="catalogue__title">Magazyn Limited Edition</h3>
+              <p class="catalogue__type">Dizajn</p>
             </li>
-            <li class="background-menu">
-              <div class="background-photo">
+            <li class="catalogue__background">
+              <div class="catalogue__photo">
                 <img
                   src="images/portfolio/img-14.jpg"
                   alt="White card with black words"
                   width="370"
                   height="294"
                 />
-                <div class="overlay-portfolio">
-                  <p class="overlay-portfolio-text">
+                <div class="catalogue__overlay">
+                  <p class="catalogue__overlay--text">
                     Technocrack jest popularną platformą wykorzystywaną do
                     rozpowszechniania koronawirusa. Firmy wykorzystują tę
                     platformę do celów szpiegowskich i ataków na
@@ -240,19 +240,19 @@
                   </p>
                 </div>
               </div>
-              <h3 class="picture-title">Projekt LAB</h3>
-              <p class="work-type">Marketing</p>
+              <h3 class="catalogue__title">Projekt LAB</h3>
+              <p class="catalogue__type">Marketing</p>
             </li>
-            <li class="background-menu">
-              <div class="background-photo">
+            <li class="catalogue__background">
+              <div class="catalogue__photo">
                 <img
                   src="images/portfolio/img-15.jpg"
                   alt="Someone typing on keyboard of laptop"
                   width="370"
                   height="294"
                 />
-                <div class="overlay-portfolio">
-                  <p class="overlay-portfolio-text">
+                <div class="catalogue__overlay">
+                  <p class="catalogue__overlay--text">
                     Technocrack jest popularną platformą wykorzystywaną do
                     rozpowszechniania koronawirusa. Firmy wykorzystują tę
                     platformę do celów szpiegowskich i ataków na
@@ -260,8 +260,8 @@
                   </p>
                 </div>
               </div>
-              <h3 class="picture-title">Growing Business</h3>
-              <p class="work-type">Aplikacja</p>
+              <h3 class="catalogue__title">Growing Business</h3>
+              <p class="catalogue__type">Aplikacja</p>
             </li>
           </ul>
         </div>
