Drobne poprawki w kodzie i usunięcie nieużywanych class z css

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
           <nav>
             <ul class="navigation">
               <li>
-                <a class="navigation__link navigation__underline" href="index.html"
+                <a
+                  class="navigation__link navigation__underline"
+                  href="index.html"
                   >Agencja</a
                 >
               </li>
@@ -422,6 +424,9 @@
         </div>
       </section>
     </main>
+
+    <!-- ---------FOOTER--------- -->
+
     <footer class="footer">
       <div class="container footer__wrapper">
         <div class="footer__info--box">
@@ -430,14 +435,18 @@
               >Web<span class="footer__span">Studio</span></a
             >
           </h3>
-          <address class="footer__address">m. Warszawa, Aleje Jerozolimskie 21</address>
+          <address class="footer__address">
+            m. Warszawa, Aleje Jerozolimskie 21
+          </address>
           <div class="footer__contacts">
             <a class="footer__contacts__link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </div>
           <div class="footer__contacts">
-            <a class="footer__contacts__link" href="tel:+48111111111">+48 111 111 111</a>
+            <a class="footer__contacts__link" href="tel:+48111111111"
+              >+48 111 111 111</a
+            >
           </div>
         </div>
         <div class="join">
@@ -503,6 +512,9 @@
         </div>
       </div>
     </footer>
+
+    <!-- ---------MODAL--------- -->
+
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal__button--close" data-modal-close>
@@ -555,9 +567,7 @@
             /><span class="form__text--checkbox"
               >Oświadczam iz akceptuje
               <a class="form__text--link" href="">Regulamin</a> i
-              <a class="form__text--link" href=""
-                >Politykę Prywatności</a
-              ></span
+              <a class="form__text--link" href="">Politykę Prywatności</a></span
             >
             <span class="form__checkmark"></span>
           </label>
