--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,9 @@
             <ul class="navigation">
               <li><a class="navigation__link" href="index.html">Agencja</a></li>
               <li>
-                <a class="navigation__link navigation__underline" href="portfolio.html"
+                <a
+                  class="navigation__link navigation__underline"
+                  href="portfolio.html"
                   >Portfolio</a
                 >
               </li>
@@ -75,11 +77,21 @@
         <div class="container">
           <nav>
             <ul class="menu">
-              <li><button class="menu__button" type="button">Wszystkie</button></li>
-              <li><button class="menu__button" type="button">Strony</button></li>
-              <li><button class="menu__button" type="button">Aplikacje</button></li>
-              <li><button class="menu__button" type="button">Dizajn</button></li>
-              <li><button class="menu__button" type="button">Marketing</button></li>
+              <li>
+                <button class="menu__button" type="button">Wszystkie</button>
+              </li>
+              <li>
+                <button class="menu__button" type="button">Strony</button>
+              </li>
+              <li>
+                <button class="menu__button" type="button">Aplikacje</button>
+              </li>
+              <li>
+                <button class="menu__button" type="button">Dizajn</button>
+              </li>
+              <li>
+                <button class="menu__button" type="button">Marketing</button>
+              </li>
             </ul>
           </nav>
           <ul class="catalogue">
@@ -120,7 +132,9 @@
                   </p>
                 </div>
               </div>
-              <h3 class="catalogue__title">Grafika New Orlean vs Golden Star</h3>
+              <h3 class="catalogue__title">
+                Grafika New Orlean vs Golden Star
+              </h3>
               <p class="catalogue__type">Dizajn</p>
             </li>
             <li class="catalogue__background">
@@ -267,6 +281,9 @@
         </div>
       </section>
     </main>
+
+    <!-- ---------FOOTER--------- -->
+
     <footer class="footer">
       <div class="container footer__wrapper">
         <div class="footer__info--box">
@@ -275,14 +292,18 @@
               >Web<span class="footer__span">Studio</span></a
             >
           </h3>
-          <address class="footer__address">m. Warszawa, Aleje Jerozolimskie 21</address>
+          <address class="footer__address">
+            m. Warszawa, Aleje Jerozolimskie 21
+          </address>
           <div class="footer__contacts">
             <a class="footer__contacts__link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </div>
           <div class="footer__contacts">
-            <a class="footer__contacts__link" href="tel:+48111111111">+48 111 111 111</a>
+            <a class="footer__contacts__link" href="tel:+48111111111"
+              >+48 111 111 111</a
+            >
           </div>
         </div>
         <div class="join">
